Fix some css layout issues

--- a/packages/client/faraday-client/src/app.module.css
+++ b/packages/client/faraday-client/src/app.module.css
@@ -1,7 +1,6 @@
 #root {
   max-width: calc(100% - 0rem);
-  margin: 0 auto;
-  padding: 2rem;
+  /* margin: 0 auto; */
   text-align: center;
 }
 
@@ -20,5 +19,6 @@
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 1fr 3fr;
   max-height: 100dvh;
+  min-height: 100dvh;
   overflow: hidden;
 }
